--- a/quickChart/src/main/resources/templates/nav-bar.html
+++ b/quickChart/src/main/resources/templates/nav-bar.html
@@ -6,7 +6,7 @@
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/Post}" >Create chart</a></li>
             <li class="nav-item"><a class="nav-link" >Get chart</a></li>
             <li class="nav-item"><a class="nav-link" >Download chart</a></li>
-            <li class="nav-item"><a class="nav-link" >Send chart</a></li>
+            <li class="nav-item"><a class="nav-link" th:href="@{/chart/Send}" >Send chart</a></li>
         </ul>
         <form class="form-inline my-2 mr-3 my-lg-0" th:action="@{/chart/Signup}" method="post">
             <input class="nav-link" value="Signup" type="hidden" />
