--- a/quickChart/src/main/resources/templates/SendChart.html
+++ b/quickChart/src/main/resources/templates/SendChart.html
@@ -15,10 +15,14 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="chart col-md-offset-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="alert alert-info alert-dismissible fade show" th:if = "${posted}">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <p><strong>Success!</strong> Chart URL Is Sent!</p>
+            </div>
             <h2 class="text-center">Send Your Chart</h2><hr>
 
             <form class="form-sendInfo" id="send-form" role="form" action="#" method="post" th:action="@{/chart/sendGrid}" th:object="${email}">
-                <div class="form-group row">
+                <div class="form-group row" >
                     <label class="col-form-label col-md-3 col-sm-3 col-xs-3">Email</label>
                     <div class="col-md-8 col-sm-8 col-xs-8">
                         <input placeholder="Enter the email" class="form-control" type="text" th:field="*{emailTo}" required/>
