--- a/quickChart/src/main/resources/templates/BarDataset.html
+++ b/quickChart/src/main/resources/templates/BarDataset.html
@@ -17,7 +17,7 @@
         <div class="chart col-md-offset-3 col-md-4 col-sm-6 col-xs-12">
             <h2 class="text-center"><span th:unless="${createDataset}">Edit your </span>Chart</h2><hr>
 
-            <form class="form-postInfo" id="chart-form" role="form" action="#" method="post" th:action="@{/chart/createChart}" th:object="${chart}">
+            <form class="form-postInfo" id="chart-form" role="form" action="#" method="post" th:action="${createDataset} ? @{/chart/createChart} : @{/chart/updateChart}" th:object="${chart}">
                 <div class="form-group row">
                     <label class="col-form-label col-md-3 col-sm-3 col-xs-3">Chart title</label>
                     <div class="col-md-8 col-sm-8 col-xs-8">
@@ -92,6 +92,13 @@
                 <div th:if="${createDataset}" class="form-group row" id="submit-btn">
                     <div class="col-md-6 col-sm-6 col-xs-6 offset-md-3 text-center">
                         <button type="submit" class="btn btn-lg btn-success btn-block submit">Create</button>
+                    </div>
+                </div>
+                <div th:unless="${createDataset}" class="form-group row">
+                    <input type="hidden" th:value="*{chartId}" th:field="*{chartId}" />
+                    <input type="hidden" th:value="*{dataSet.datasetId}" th:field="*{dataSet.datasetId}" />
+                    <div class="col-md-6 col-sm-6 col-xs-6 offset-md-3 text-center">
+                        <button type="submit" class="btn btn-lg btn-primary btn-block submit">Update</button>
                     </div>
                 </div>
             </form>
