--- a/quickChart/src/main/resources/templates/nav-bar.html
+++ b/quickChart/src/main/resources/templates/nav-bar.html
@@ -5,7 +5,7 @@
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/}" >Home</a></li>
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/Post}" >Create chart</a></li>
             <li class="nav-item"><a class="nav-link" >Get chart</a></li>
-            <li class="nav-item"><a class="nav-link" >Download chart</a></li>
+            <li class="nav-item"><a class="nav-link" th:href="@{/chart/Download}">Download chart</a></li>
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/Send}" >Send chart</a></li>
         </ul>
         <form class="form-inline my-2 mr-3 my-lg-0" th:action="@{/chart/Signup}" method="post">
