--- a/quickChart/src/main/resources/templates/nav-bar.html
+++ b/quickChart/src/main/resources/templates/nav-bar.html
@@ -4,7 +4,7 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/}" >Home</a></li>
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/Post}" >Create chart</a></li>
-            <li class="nav-item"><a class="nav-link" th:href="@{/chart/UploadFile}" >Create chart2</a></li>
+            <li class="nav-item"><a class="nav-link" th:href="@{/chart/UploadFile}" >Upload CSV</a></li>
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/Download}">Download chart</a></li>
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/Send}" >Send chart</a></li>
         </ul>
