--- a/quickChart/src/main/resources/templates/UploadFile.html
+++ b/quickChart/src/main/resources/templates/UploadFile.html
@@ -54,43 +54,15 @@
                 </div>
 
                 <div class="form-group row">
-                    <label class="col-form-label col-md-3 col-sm-3 col-xs-3">Dataset Label</label>
+                    <label class="col-form-label col-md-3 col-sm-3 col-xs-3">Upload Data</label>
                     <div class="col-md-8 col-sm-8 col-xs-8">
-                        <input placeholder="label" class="form-control" type="text" th:field="*{dataSet.label}" required/>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-form-label col-md-3 col-sm-3 col-xs-3">Border Color</label>
-                    <div class="col-md-8 col-sm-8 col-xs-8">
-                        <input class="form-control" type="color" th:field="*{dataSet.border_color}" />
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-form-label col-md-3 col-sm-3 col-xs-3">Background Color</label>
-                    <div class="col-md-8 col-sm-8 col-xs-8">
-                        <input class="form-control" type="color" th:field="*{dataSet.background_color}" />
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-form-label col-md-3 col-sm-3 col-xs-3">Border Width</label>
-                    <div class="col-md-8 col-sm-8 col-xs-8">
-                        <input class="form-control" type="number" min="1" th:field="*{dataSet.borderWidth}" />
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label class="col-form-label col-md-3 col-sm-3 col-xs-3">File</label>
-                    <div class="col-md-8 col-sm-8 col-xs-8">
-                        <input type="file" name="file" class="form-control-file" />
+                        <input type="file" name="file" class="form-control-file" required />
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <div class="col-md-6 offset-md-3 col-sm-6 col-xs-6 text-center">
-                        <button type="submit" class="btn btn-lg btn-success btn-block submit">Upload</button>
+                        <button type="submit" class="btn btn-lg btn-success btn-block submit">Add Dataset</button>
                     </div>
                 </div>
             </form>
