--- a/quickChart/src/main/resources/templates/BarChart.html
+++ b/quickChart/src/main/resources/templates/BarChart.html
@@ -67,6 +67,14 @@
             <input placeholder="data" class="form-control" type="text" th:field="*{dataSet.dataMap[__${data.key}__]}" required />
         </div>
     </div>
+    <div class="dataset-group form-group row">
+        <div class="col-md-6  my-3">
+            <a class="btn btn-outline-success btn-block" th:href="@{/chart/downloadChart(chartId=${chart.getChartId()})}">Download Chart</a>
+        </div>
+        <div class="col-md-6  my-3">
+            <a class="btn btn-outline-secondary btn-block" th:href="@{/chart/Send(chartId=${chart.getChartId()})}">Send Chart</a>
+        </div>
+    </div>
     <div class="form-group row">
         <input type="hidden" th:value="*{chartId}" th:field="*{chartId}" />
         <input type="hidden" th:value="*{dataSet.datasetId}" th:field="*{dataSet.datasetId}" />
