--- a/quickChart/src/main/resources/templates/ViewChart.html
+++ b/quickChart/src/main/resources/templates/ViewChart.html
@@ -25,6 +25,10 @@
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <p><strong>Success!</strong> Chart Is Downloaded!</p>
     </div>
+    <div class="alert alert-danger alert-dismissible fade show" th:if = "${false}">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <p><strong>Success!</strong> Error!</p>
+    </div>
     <div class="row justify-content-center">
         <div class="chart col-md-offset-3 col-md-4 col-sm-6 col-xs-12">
             <h2 class="text-center">Edit your Chart</h2><hr>
