--- a/quickChart/src/main/resources/templates/UploadFile.html
+++ b/quickChart/src/main/resources/templates/UploadFile.html
@@ -14,7 +14,12 @@
 <div th:insert="nav-bar :: nav"></div>
 <div class="container-fluid">
     <div class="row justify-content-center">
+
         <div class="chart col-md-offset-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="alert alert-danger alert-dismissible fade show" th:if = "${formatValidate}">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <p><strong>Fail!</strong> CSV Format Is Wrong!</p>
+            </div>
             <h2 class="text-center">Create a chart</h2><hr>
 
             <!-- Upload File            -->
