--- a/quickChart/src/main/resources/templates/ViewChart.html
+++ b/quickChart/src/main/resources/templates/ViewChart.html
@@ -27,7 +27,7 @@
     </div>
     <div class="alert alert-danger alert-dismissible fade show" th:if = "${downloadFail}">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <p><strong>Fail!</strong> Error!</p>
+        <p><strong>Fail!</strong> Fail to download a chart!</p>
     </div>
     <div class="row justify-content-center">
         <div class="chart col-md-offset-3 col-md-4 col-sm-6 col-xs-12">
