Added signup page and several signup functions

--- a/quickChart/src/main/resources/templates/Signup.html
+++ b/quickChart/src/main/resources/templates/Signup.html
@@ -17,6 +17,14 @@
     </div>
 </header>
 
+<div class="create">
+    <form class="create-form" action="#" method="post" th:action="@{/chart/createUser}" th:object="${user}">
+        <input placeholder="First Name" type="text" th:field="*{first_name}" />
+        <input placeholder="Last Name" type="text" th:field="*{last_name}" />
+        <input placeholder="Password" type="text" th:field="*{password}" />
+        <input type="submit" class="create-btn" value="CREATE" />
+    </form>
+</div>
 
 </body>
 </html>
