Implemented a bcrypt password encoder used in spring security that allows a user to create new user info and upload to db. Can be used in new login

--- a/quickChart/src/main/resources/templates/Signup.html
+++ b/quickChart/src/main/resources/templates/Signup.html
@@ -16,6 +16,7 @@
         </div>
     </div>
 </header>
+<a th:href="@{/chart/}"  style="--i: 0.05s;">Home</a>
 
 <div class="create">
     <form class="create-form" action="#" method="post" th:action="@{/chart/createUser}" th:object="${user}">
