Added update chart and send chart to JSON controller

--- a/quickChart/src/main/resources/templates/Chart.html
+++ b/quickChart/src/main/resources/templates/Chart.html
@@ -28,7 +28,7 @@
                     </div>
                     <p class="message"> chart URL :  <span th:text="${chart.getChartUrl()}"></span></p>
                     <div>
-                        <img th:src="${chart.getChartUrl()}" alt="Chart"/>
+                        <img th:src="${chart.getChartUrl()}" style="color:red;font-size: 150%" alt="This chart has expired, please update to premium account"/>
                     </div>
                 </div>
             </div>
