--- a/quickChart/src/main/resources/templates/ViewChart.html
+++ b/quickChart/src/main/resources/templates/ViewChart.html
@@ -51,7 +51,7 @@
                 <div class="col">
                     <p class="message"> chart URL :  <span th:text="${chart.getChartUrl()}"></span></p>
                     <div class="my-8">
-                        <img th:src="${chart.getChartUrl()}" style="color:red;font-size: 150%" alt="This chart has expired, please update to premium account"/>
+                        <img th:src="${chart.getChartUrl()}" style="color:red;font-size: 150%" alt="Chart image has expired, click on Update button to generate the image."/>
                     </div>
                 </div>
             </div>
