Can create user through postman and authenticate then call other methods

--- a/quickChart/src/main/resources/templates/Signup.html
+++ b/quickChart/src/main/resources/templates/Signup.html
@@ -16,7 +16,7 @@
         </div>
     </div>
 </header>
-<a th:href="@{/chart/}"  style="--i: 0.05s;">Home</a>
+<a th:href="@{/chart/Landing}"  style="--i: 0.05s;">Landing Page</a>
 
 <div class="create">
     <form class="create-form" action="#" method="post" th:action="@{/chart/createUser}" th:object="${user}">
