--- a/quickChart/src/main/resources/templates/nav-bar.html
+++ b/quickChart/src/main/resources/templates/nav-bar.html
@@ -6,10 +6,10 @@
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/PostForm}" >Create chart</a></li>
             <li class="nav-item"><a class="nav-link" th:href="@{/chart/UploadFile}" >Upload CSV</a></li>
         </ul>
-        <form class="form-inline my-2 mr-3 my-lg-0" th:action="@{/chart/Signup}" method="post">
-            <input class="nav-link" value="Signup" type="hidden" />
-            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Signup</button>
-        </form>
+<!--        <form class="form-inline my-2 mr-3 my-lg-0" th:action="@{/chart/Signup}" method="post">-->
+<!--            <input class="nav-link" value="Signup" type="hidden" />-->
+<!--            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Signup</button>-->
+<!--        </form>-->
         <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post">
             <input class="nav-link" value="Logout" type="hidden" />
             <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Logout</button>
